sched C save fixes

--- a/front-end/src/app/forms/sched-c/loan.component.scss
+++ b/front-end/src/app/forms/sched-c/loan.component.scss
@@ -101,6 +101,10 @@
             }
           }
 
+          .ng-select.ng-select-single .ng-select-container {
+            height: 44px;
+          }
+
           /**
            * Custom CSS for state dropdown component.
            */
