--- a/front-end/src/app/forms/sched-c/loan.component.html
+++ b/front-end/src/app/forms/sched-c/loan.component.html
@@ -45,15 +45,16 @@
       <ng-container *ngFor="let row of formFields; let i = index">
       <div class="row" *ngIf="row.cols">
           <ng-container *ngIf="row.cols | isArray">
-            <div [class]="row.colClassName" *ngFor="let col of row.cols">
-              <div class="form-group">
+            <ng-container *ngFor="let col of row.cols">
+            <div [class]="determineColClass(row, col)" *ngIf="isToggleShow(col)">
+              <div class="form-group" [style.width]="setSelectTypeWidth(col)">
                 <label [for]="col?.name">
                   {{ col?.text }}
-                  <button type="button" class="btn btn-info" ngbTooltip="{{ col?.infoText }}"
+                  <div type="button" class="btn btn-info" ngbTooltip="{{ col?.infoText }}"
                     tooltipClass="form-tooltip" *ngIf="col?.infoIcon">
                     <i class="info-icon" aria-hidden="true"></i>
                     <span class="sr-only">Click here for more information</span>
-                </button>
+                </div>
                   <ng-container *ngIf="!col?.validation?.required">
                     (Optional)
                   </ng-container>
@@ -334,33 +335,34 @@
                     [ngClass]="
                       frmLoan.get(col?.name)?.invalid &&
                       (frmLoan.touched || frmLoan.dirty)
-                        ? 'state-select-error'
+                        ? 'forms__select-error'
                         : ''
                     "
                   >
                   </ng-select>
               </ng-container>
-              <!--<ng-container *ngIf="col?.type === 'select' && col?.name === 'loansecured'">
-                  <ng-select #loansecuredSelect
-                    [items]="secured"
-                    (change)="handleloansecuredChange($event, col)"
-                    [style.width]="col?.width"
-                    [style.height]="col?.height"
-                    [formControlName]="col?.name"
-                    bindValue="code"
-                    bindLabel="name" 
-                    [ngClass]="
-                      frmLoan.get(col?.name)?.invalid &&
-                      (frmLoan.touched || frmLoan.dirty)
-                        ? 'state-select-error'
-                        : ''
-                    "
-                  >
-                  </ng-select>
-              </ng-container>  -->            
+              <ng-container *ngIf="col?.type === 'select' && col?.name === 'secured'">
+                <ng-select #securedSelect
+                  id="secured"
+                  [items]="secured"
+                  [style.width]="col?.width"
+                  [style.height]="col?.height"
+                  [formControlName]="col?.name"
+                  bindValue="code"
+                  bindLabel="name" 
+                  [ngClass]="
+                    frmLoan.get(col?.name)?.invalid &&
+                    (frmLoan.touched || frmLoan.dirty)
+                      ? 'forms__select-error'
+                      : ''
+                  "
+                >
+                </ng-select>
+              </ng-container>           
 
               <ng-container *ngIf="col?.type === 'select' && col?.name === 'election_code'">
                 <ng-select #electioncodeSelect
+                  id="election"
                   [items]="electionTypes"
                   (change)="electionTypeChanged($event, col)"
                   [style.width]="col?.width"
@@ -371,14 +373,15 @@
                   [ngClass]="
                     frmLoan.get(col?.name)?.invalid &&
                     (frmLoan.touched || frmLoan.dirty)
-                      ? 'state-select-error'
+                      ? 'forms__select-error'
                       : ''
                   "
                 >
-                </ng-select>
+              </ng-select>
             </ng-container>         
              </div>
             </div>
+            </ng-container>
             <!-- ./col -->
           </ng-container>
       </div>
@@ -391,9 +394,9 @@
           </div>
         </ng-container>
       </ng-container> 
-      <div class="row" >
-        Please provide your paper Loan agreement by filling form 99 in the C1 Agrrement  
-    </div>   
+      <div class="row">  
+        <div class="col">Please provide your paper Loan agreement by filling form 99 in the C1 Agrrement</div>
+      </div>   
     </section>
 
     <footer>
@@ -409,13 +412,14 @@
         <div class="grid-row">
           <div class="grid-row__col grid-row__col--12">
             <div class="forms__btn-container">
-              <button class="btn btn-primary btn-left" type="button" (click)="loanRepayment()">
+              <button class="btn btn-secondary-gray btn-left" type="button" (click)="loanRepayment()">
                 Loan Repayment
               </button>
-              <button class="btn btn-primany btn-right" type="button" (click)="saveLoan()">
+              <button class="btn btn-secondary btn-right" type="button" (click)="saveLoan()">
                 Save
                 </button>
-              <button *ngIf="entityType === 'ORG'" class="btn btn-primany btn-right" type="button" (click)="AddLoanEndorser()">
+              <button *ngIf="entityType === 'ORG'" class="btn btn-secondary-gray btn-right" type="button" 
+                (click)="AddLoanEndorser()">
                 Endorser
               </button>
 
