--- a/front-end/src/app/forms/sched-c/loan-summary/loan-summary.component.html
+++ b/front-end/src/app/forms/sched-c/loan-summary/loan-summary.component.html
@@ -62,11 +62,12 @@
         <td>
           <input [(ngModel)]="ln.selected" type="checkbox" (click)="checkForMultiChecked($event)">
         </td>
+        <!-- <td [@fadeInOut] *ngIf="isColumnVisible('name')">{{ln.entity_type === 'IND' ? ln.last_name + ', ' + ln.first_name : ln.entity_nm}}</td> -->
         <td [@fadeInOut] *ngIf="isColumnVisible('name')">{{ln.name}}</td>
-        <td [@fadeInOut] *ngIf="isColumnVisible('loan_amount_original')">{{ln.loan_amount_original}}</td>
-        <td [@fadeInOut] *ngIf="isColumnVisible('loan_payment_to_date')">{{ln.loan_payment_to_date | date: 'MM/dd/yyyy @ hh:mm:ss a' }}</td>
-        <td [@fadeInOut] *ngIf="isColumnVisible('loan_balance')">{{ln.loan_balance}}</td>        
-        <td [@fadeInOut] *ngIf="isColumnVisible('loan_due_date')">{{ln.loan_due_date | date: 'MM/dd/yyyy @ hh:mm:ss a' }}</td>
+        <td [@fadeInOut] *ngIf="isColumnVisible('loan_amount_original')">{{ln.loan_amount_original | currency:'USD':'symbol-narrow':'1.2-2'}}</td>
+        <td [@fadeInOut] *ngIf="isColumnVisible('loan_payment_to_date')">{{ln.loan_payment_to_date | currency:'USD':'symbol-narrow':'1.2-2'}}</td>
+        <td [@fadeInOut] *ngIf="isColumnVisible('loan_balance')">{{ln.loan_balance | currency:'USD':'symbol-narrow':'1.2-2'}}</td>        
+        <td [@fadeInOut] *ngIf="isColumnVisible('loan_due_date')">{{ln.loan_due_date | date: 'MM/dd/yyyy' }}</td>
 
         <td>
           <div [@fadeInOut] *ngIf="isRecycleBinViewActive()">
