Fne 1717 sprint24 mahendra (#1431)
* added log in create json builder API

* corrected fec contact link

--- a/front-end/src/app/app-layout/app-layout.component.html
+++ b/front-end/src/app/app-layout/app-layout.component.html
@@ -84,7 +84,7 @@
             <address>
               1050 First Street NE, Washington DC, 20002
               <br />
-              <a href="https://fec.gov/contact" draggable="false" target="_blank">fec.gov/contact</a>
+              <a href="https://fec.gov" draggable="false" target="_blank">fec.gov</a>
             </address>
           </h6>
         </div>
