commiting to local loans

--- a/front-end/src/app/forms/form-3x/f3x/f3x.component.html
+++ b/front-end/src/app/forms/form-3x/f3x/f3x.component.html
@@ -127,6 +127,8 @@
 
         <app-loanpayment
           *ngIf="scheduleType === 'sched_c_loan_payment'"
+          [transactionDetail]="transactionDetailSchedC"
+          (status)="onNotify($event)"
         >
         </app-loanpayment>
 
