--- a/front-end/src/app/forms/sched-c/loan-summary/loan-summary.component.html
+++ b/front-end/src/app/forms/sched-c/loan-summary/loan-summary.component.html
@@ -9,7 +9,7 @@
  <div  class="loanSumamry__table-container">
   <div class="grid-row float-right loanSumamry__page-item-range">
     <div class="float-right loanSumamry__item-range">
-      {{determineItemRange()}} of {{config.totalItems}}
+      {{determineItemRange()}} of {{LoanModel.length}}
     </div>
   </div>
   <table class="table table-striped table-hover table__sortable loanSumamry__table">
@@ -58,7 +58,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let ln of LoanModel | paginate: config; let i = index">
+      <tr *ngFor="let ln of LoanModel | paginate: {itemsPerPage: 10, currentPage: currentPageNumber}">
         <td>
           <input [(ngModel)]="ln.selected" type="checkbox" (click)="checkForMultiChecked($event)">
         </td>
@@ -97,29 +97,12 @@
           </div>
         </td>
       </tr>
-      <!--<tr *ngIf="isLoanSummryViewActive()">
-        <td></td>
-        <td *ngIf="isColumnVisible('name')"></td>
-        <td *ngIf="isColumnVisible('type')"></td>
-        <td *ngIf="isColumnVisible('id')"></td>
-        <td *ngIf="isColumnVisible('canCmteId')"></td>
-        <td *ngIf="isColumnVisible('street')"></td>
-        <td *ngIf="isColumnVisible('city')"></td>
-        <td *ngIf="isColumnVisible('state')"></td>
-        <td *ngIf="isColumnVisible('zip')"></td>
-        <td *ngIf="isColumnVisible('employer')"></td>
-        <td *ngIf="isColumnVisible('occupation')"></td>
-        <td *ngIf="isColumnVisible('candOffice')"></td>
-        <td *ngIf="isColumnVisible('candOfficeState')"></td>
-        <td *ngIf="isColumnVisible('candOfficeDistrict')"></td>
-        <td></td>
-      </tr>-->
     </tbody>
 
   </table>
   <hr/>
-  <div *ngIf="showPagination()" class="d-flex justify-content-center loanSumamry__table-pagination-container">
-    <pagination-controls [id]="config.id" (pageChange)="getPage($event)">
+  <div class="d-flex justify-content-center loanSumamry__table-pagination-container">
+    <pagination-controls (pageChange)="currentPageNumber = $event">
     </pagination-controls>
   </div>
 
