--- a/front-end/src/app/forms/sched-c/loanpayment/loanpayment.component.scss
+++ b/front-end/src/app/forms/sched-c/loanpayment/loanpayment.component.scss
@@ -64,7 +64,7 @@
         margin-bottom: 20px;
         
         .col,
-        .col-md-4 {
+        .col-md-3 {
           &.info-text {
             padding-top: 45px;
           }
@@ -99,16 +99,24 @@
           input[type=checkbox] {
             transform: scale(1.5);
           }
+
+          input[type=text]{
+            height: 30px;
+          }
+          .ng-select.custom ::ng-deep .ng-select-container  {            
+            height: 45px;
+          }
+
           /**
            * Custom CSS for state dropdown component.
            */
           .ng-select {
             &.state-select-error {
-              .ng-select-container {
+              ::ng-deep .ng-select-container {
                 border: 1px solid $red;
               }
             }
-            .ng-select-container {
+            ::ng-deep .ng-select-container {
               height: 45px;
               //width: 350px;
               .ng-input {
