--- a/front-end/src/app/forms/sched-h5/sched-h5.component.scss
+++ b/front-end/src/app/forms/sched-h5/sched-h5.component.scss
@@ -237,3 +237,10 @@
    // margin-bottom: 1px  !important;
   }
 }
+
+pagination-controls /deep/ .ngx-pagination .current{
+  padding: 0.1875rem 0.625rem;
+  background: #9B9B9B !important;;
+  color: #fefefe;
+  cursor: default;
+}
