--- a/front-end/src/app/forms/sched-h3/sched-h3.component.scss
+++ b/front-end/src/app/forms/sched-h3/sched-h3.component.scss
@@ -249,5 +249,31 @@
     display: block;
     padding: 0.1875rem 0.625rem;
     border-radius: 0;
-  }	
+  }
+
+  .bulk_action {
+    text-align: left;
+  }
+
+  .dropdown-menu {
+    min-width: 6em;
+  }
+
+  .dropdown-toggle:after {
+    border: none;
+  }
+}
+
+pagination-controls /deep/ .ngx-pagination .current{
+  padding: 0.1875rem 0.625rem;
+  background: #9B9B9B !important;;
+  color: #fefefe;
+  cursor: default;
+}
+
+pagination-controls /deep/ .ngx-pagination a, .ngx-pagination button {
+  color: #9B9B9B !important;;
+  display: block;
+  padding: 0.1875rem 0.625rem;
+  border-radius: 0;
 }
