add get summary call after switch

--- a/front-end/src/app/forms/sched-h5/sched-h5.component.scss
+++ b/front-end/src/app/forms/sched-h5/sched-h5.component.scss
@@ -236,6 +236,14 @@
     margin-top: 1px  !important;
    // margin-bottom: 1px  !important;
   }
+
+  .dropdown-menu {
+    min-width: 6em;
+  }
+
+  .dropdown-toggle:after {
+    border: none;
+  }
 }
 
 pagination-controls /deep/ .ngx-pagination .current{
